--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@angelofana/emoji.json",
+  "name": "@angelofana/emoji-json",
   "version": "15.1.0",
   "description": "适配了 简体中文 的 emoji.json 数据源，与 unicode 联盟的数据源保持同步并版本对齐",
-  "main": "dist/emoji.json",
+  "main": "dist/emoji-tree.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "angelofan",
   "license": "MIT",
-  "bugs": "https://github.com/angelofan/emoji.json/issues",
-  "homepage": "https://github.com/angelofan/emoji.json#readme",
+  "bugs": "https://github.com/angelofan/emoji-json/issues",
+  "homepage": "https://github.com/angelofan/emoji-json#readme",
   "keywords": [
     "emoji",
     "json",
