--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@angelofana/emoji-json",
   "version": "15.1.0",
   "description": "适配了 简体中文 的 emoji.json 数据源，与 unicode 联盟的数据源保持同步并版本对齐",
-  "main": "dist/emoji-tree.json",
+  "main": "emoji-tree.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
